changed polishing steps